// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonToggle control 1`] = `
<Wrapper
  bgColorOff="inherit"
  bgColorOn="inherit"
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height={null}
  iconName="bomb"
  iconNameOff="bomb"
  iconNameOn="bomb"
  iconStyle=""
  id={null}
  initialToggle={false}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="ButtonToggle"
  onClick={[Function]}
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Button
    bgColorOff="inherit"
    bgColorOn="inherit"
    bottom={null}
    className="ui-button-toggle test-class"
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage={null}
    fgColorOff="gray"
    fgColorOn="black"
    focus={false}
    height={null}
    iconName="bomb"
    iconNameOff="bomb"
    iconNameOn="bomb"
    iconStyle=""
    id={null}
    initialToggle={false}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noripple={true}
    notheme={false}
    obj="ButtonToggle"
    onClick={[Function]}
    padding={null}
    selected={false}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "gray",
      }
    }
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  />
</Wrapper>
`;

exports[`Test creation of a ButtonToggle control with on/off icons 1`] = `
<ButtonToggle
  bgColorOff="inherit"
  bgColorOn="inherit"
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height={null}
  iconName="bomb"
  iconNameOff="star-o"
  iconNameOn="star"
  iconStyle=""
  id={null}
  initialToggle={false}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="ButtonToggle"
  onClick={[Function]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Wrapper
    bgColorOff="inherit"
    bgColorOn="inherit"
    bottom={null}
    className={null}
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage={null}
    fgColorOff="gray"
    fgColorOn="black"
    focus={false}
    height={null}
    iconName="bomb"
    iconNameOff="star-o"
    iconNameOn="star"
    iconStyle=""
    id={null}
    initialToggle={false}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="ButtonToggle"
    onClick={[Function]}
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <Button
        bgColorOff="inherit"
        bgColorOn="inherit"
        bottom={null}
        className="ui-button-toggle"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={false}
        err={null}
        errorMessage={null}
        fgColorOff="gray"
        fgColorOn="black"
        focus={false}
        height={null}
        iconName="star-o"
        iconNameOff="star-o"
        iconNameOn="star"
        iconStyle=""
        id={null}
        initialToggle={false}
        left={null}
        location="none"
        minHeight={null}
        minWidth={null}
        noedit={false}
        nohover={false}
        noripple={true}
        notheme={false}
        obj="ButtonToggle"
        onClick={[Function]}
        padding={null}
        selected={false}
        sizing="normal"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
        testing={true}
        theme={null}
        tooltip={null}
        top={null}
        visible={true}
        width={null}
        xcss={null}
      >
        <Wrapper
          bgColorOff="inherit"
          bgColorOn="inherit"
          bottom={null}
          className="ui-button-toggle"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          fgColorOff="gray"
          fgColorOn="black"
          focus={false}
          height={null}
          iconName="star-o"
          iconNameOff="star-o"
          iconNameOn="star"
          iconStyle=""
          id={null}
          initialToggle={false}
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          noedit={false}
          nohover={false}
          noripple={true}
          notheme={false}
          obj="ButtonToggle"
          onClick={[Function]}
          onError={[Function]}
          padding={null}
          reset={false}
          selected={false}
          sizing="normal"
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "gray",
            }
          }
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "fontFamily": "OpenSans, Georgia, serif",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "itemHoverColor": "#bedb39",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "titleBarBackgroundColor": "#004358",
                "titleBarForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.div
              className="ui-button nohover ui-button-toggle"
              disabled={false}
              id="Button-0"
              onClick={[Function]}
              sizing="normal"
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "gray",
                }
              }
              visible={true}
            >
              <StyledComponent
                className="ui-button nohover ui-button-toggle"
                disabled={false}
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-gzVnrw",
                      "isStatic": false,
                      "lastClassName": "lmUwCM",
                      "rules": Array [
                        "
	",
                        "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                        "

	flex: 1;

	&:not(.nohover):hover {
		background-color: ",
                        [Function],
                        " ",
                        [Function],
                        ";
	}

	",
                        [Function],
                        "
	",
                        [Function],
                        "
",
                      ],
                    },
                    "displayName": "styled.div",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-gzVnrw",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                id="Button-0"
                onClick={[Function]}
                sizing="normal"
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "gray",
                  }
                }
                visible={true}
              >
                <div
                  className="ui-button nohover ui-button-toggle sc-gzVnrw lmUwCM"
                  disabled={false}
                  id="Button-0"
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "gray",
                    }
                  }
                >
                  <Icon
                    bottom={null}
                    className=""
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage={null}
                    focus={false}
                    height={null}
                    iconName="star-o"
                    id={null}
                    imageFile=""
                    left={null}
                    location="none"
                    minHeight={null}
                    minWidth={null}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    obj="Icon"
                    padding={null}
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    theme={null}
                    tooltip={null}
                    top={null}
                    visible={true}
                    width={null}
                    xcss={null}
                  >
                    <Wrapper
                      bottom={null}
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage={null}
                      focus={false}
                      height={null}
                      iconName="star-o"
                      id={null}
                      imageFile=""
                      left={null}
                      location="none"
                      minHeight={null}
                      minWidth={null}
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      obj="Icon"
                      onError={[Function]}
                      padding={null}
                      reset={false}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      tooltip={null}
                      top={null}
                      visible={true}
                      width={null}
                      xcss={null}
                    >
                      <ThemeProvider
                        theme={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#c0c0c0",
                            "color": "#000000",
                            "fontFamily": "OpenSans, Georgia, serif",
                            "headerBackgroundColor": "#004358",
                            "headerForegroundColor": "#ffffff",
                            "headerHoverColor": "#ffe11a",
                            "hoverColor": "#c0c0c0",
                            "inputBorderColor": "#c0c0c0",
                            "itemHoverColor": "#bedb39",
                            "selectedBackgroundColor": "#1f8a70",
                            "selectedForegroundColor": "#ffe11a",
                            "titleBarBackgroundColor": "#004358",
                            "titleBarForegroundColor": "#ffe11a",
                            "tooltipBackgroundColor": "#708090",
                            "tooltipForegroundColor": "#ffffff",
                            "transitionDelay": "0.5s",
                          }
                        }
                      >
                        <styled.i
                          bottom={null}
                          className="ui-icon fa fa-fw fa-star-o"
                          contentEditable={false}
                          controlled={true}
                          direction="right"
                          disabled={false}
                          err={null}
                          errorMessage={null}
                          focus={false}
                          height={null}
                          iconName="star-o"
                          id={null}
                          imageFile=""
                          left={null}
                          location="none"
                          minHeight={null}
                          minWidth={null}
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          notheme={false}
                          obj="Icon"
                          padding={null}
                          selected={false}
                          sizing="normal"
                          style={Object {}}
                          testing={true}
                          theme={null}
                          tooltip={null}
                          top={null}
                          visible={true}
                          width={null}
                          xcss={null}
                        >
                          <StyledComponent
                            bottom={null}
                            className="ui-icon fa fa-fw fa-star-o"
                            contentEditable={false}
                            controlled={true}
                            direction="right"
                            disabled={false}
                            err={null}
                            errorMessage={null}
                            focus={false}
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bwzfXH",
                                  "isStatic": false,
                                  "lastClassName": "hBOHvv",
                                  "rules": Array [
                                    "
	text-align: center;
	",
                                    [Function],
                                    "
	",
                                    [Function],
                                    "
	",
                                    [Function],
                                    "
	",
                                    [Function],
                                    "
",
                                  ],
                                },
                                "displayName": "styled.i",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bwzfXH",
                                "target": "i",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            height={null}
                            iconName="star-o"
                            id={null}
                            imageFile=""
                            left={null}
                            location="none"
                            minHeight={null}
                            minWidth={null}
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            notheme={false}
                            obj="Icon"
                            padding={null}
                            selected={false}
                            sizing="normal"
                            style={Object {}}
                            testing={true}
                            theme={null}
                            tooltip={null}
                            top={null}
                            visible={true}
                            width={null}
                            xcss={null}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-star-o sc-bwzfXH hBOHvv"
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              height={null}
                              id={null}
                              selected={false}
                              style={Object {}}
                              width={null}
                            />
                          </StyledComponent>
                        </styled.i>
                      </ThemeProvider>
                    </Wrapper>
                  </Icon>
                </div>
              </StyledComponent>
            </styled.div>
          </ThemeProvider>
        </Wrapper>
      </Button>
    </ThemeProvider>
  </Wrapper>
</ButtonToggle>
`;

exports[`Test disabling of a ButtonToggle 1`] = `
<ButtonToggle
  bgColorOff="inherit"
  bgColorOn="inherit"
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height={null}
  iconName="bomb"
  iconNameOff="bomb"
  iconNameOn="bomb"
  iconStyle=""
  id={null}
  initialToggle={false}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="ButtonToggle"
  onClick={[MockFunction]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Wrapper
    bgColorOff="inherit"
    bgColorOn="inherit"
    bottom={null}
    className={null}
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={true}
    err={null}
    errorMessage={null}
    fgColorOff="gray"
    fgColorOn="black"
    focus={false}
    height={null}
    iconName="bomb"
    iconNameOff="bomb"
    iconNameOn="bomb"
    iconStyle=""
    id={null}
    initialToggle={false}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="ButtonToggle"
    onClick={[MockFunction]}
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <Button
        bgColorOff="inherit"
        bgColorOn="inherit"
        bottom={null}
        className="ui-button-toggle"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={true}
        err={null}
        errorMessage={null}
        fgColorOff="gray"
        fgColorOn="black"
        focus={false}
        height={null}
        iconName="bomb"
        iconNameOff="bomb"
        iconNameOn="bomb"
        iconStyle=""
        id={null}
        initialToggle={false}
        left={null}
        location="none"
        minHeight={null}
        minWidth={null}
        noedit={false}
        nohover={false}
        noripple={true}
        notheme={false}
        obj="ButtonToggle"
        onClick={[Function]}
        padding={null}
        selected={false}
        sizing="normal"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
        testing={true}
        theme={null}
        tooltip={null}
        top={null}
        visible={true}
        width={null}
        xcss={null}
      >
        <Wrapper
          bgColorOff="inherit"
          bgColorOn="inherit"
          bottom={null}
          className="ui-button-toggle"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={true}
          err={null}
          errorMessage={null}
          fgColorOff="gray"
          fgColorOn="black"
          focus={false}
          height={null}
          iconName="bomb"
          iconNameOff="bomb"
          iconNameOn="bomb"
          iconStyle=""
          id={null}
          initialToggle={false}
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          noedit={false}
          nohover={false}
          noripple={true}
          notheme={false}
          obj="ButtonToggle"
          onClick={[Function]}
          onError={[Function]}
          padding={null}
          reset={false}
          selected={false}
          sizing="normal"
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "gray",
            }
          }
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "fontFamily": "OpenSans, Georgia, serif",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "itemHoverColor": "#bedb39",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "titleBarBackgroundColor": "#004358",
                "titleBarForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.div
              className="ui-button nohover ui-button-toggle"
              disabled={true}
              id="Button-0"
              onClick={[Function]}
              sizing="normal"
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "gray",
                }
              }
              visible={true}
            >
              <StyledComponent
                className="ui-button nohover ui-button-toggle"
                disabled={true}
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-gzVnrw",
                      "isStatic": false,
                      "lastClassName": "fqspZq",
                      "rules": Array [
                        "
	",
                        "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                        "

	flex: 1;

	&:not(.nohover):hover {
		background-color: ",
                        [Function],
                        " ",
                        [Function],
                        ";
	}

	",
                        [Function],
                        "
	",
                        [Function],
                        "
",
                      ],
                    },
                    "displayName": "styled.div",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-gzVnrw",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                id="Button-0"
                onClick={[Function]}
                sizing="normal"
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "gray",
                  }
                }
                visible={true}
              >
                <div
                  className="ui-button nohover ui-button-toggle sc-gzVnrw fqspZq"
                  disabled={true}
                  id="Button-0"
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "gray",
                    }
                  }
                >
                  <Icon
                    bottom={null}
                    className=""
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage={null}
                    focus={false}
                    height={null}
                    iconName="bomb"
                    id={null}
                    imageFile=""
                    left={null}
                    location="none"
                    minHeight={null}
                    minWidth={null}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    obj="Icon"
                    padding={null}
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    theme={null}
                    tooltip={null}
                    top={null}
                    visible={true}
                    width={null}
                    xcss={null}
                  >
                    <Wrapper
                      bottom={null}
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage={null}
                      focus={false}
                      height={null}
                      iconName="bomb"
                      id={null}
                      imageFile=""
                      left={null}
                      location="none"
                      minHeight={null}
                      minWidth={null}
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      obj="Icon"
                      onError={[Function]}
                      padding={null}
                      reset={false}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      tooltip={null}
                      top={null}
                      visible={true}
                      width={null}
                      xcss={null}
                    >
                      <ThemeProvider
                        theme={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#c0c0c0",
                            "color": "#000000",
                            "fontFamily": "OpenSans, Georgia, serif",
                            "headerBackgroundColor": "#004358",
                            "headerForegroundColor": "#ffffff",
                            "headerHoverColor": "#ffe11a",
                            "hoverColor": "#c0c0c0",
                            "inputBorderColor": "#c0c0c0",
                            "itemHoverColor": "#bedb39",
                            "selectedBackgroundColor": "#1f8a70",
                            "selectedForegroundColor": "#ffe11a",
                            "titleBarBackgroundColor": "#004358",
                            "titleBarForegroundColor": "#ffe11a",
                            "tooltipBackgroundColor": "#708090",
                            "tooltipForegroundColor": "#ffffff",
                            "transitionDelay": "0.5s",
                          }
                        }
                      >
                        <styled.i
                          bottom={null}
                          className="ui-icon fa fa-fw fa-bomb"
                          contentEditable={false}
                          controlled={true}
                          direction="right"
                          disabled={false}
                          err={null}
                          errorMessage={null}
                          focus={false}
                          height={null}
                          iconName="bomb"
                          id={null}
                          imageFile=""
                          left={null}
                          location="none"
                          minHeight={null}
                          minWidth={null}
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          notheme={false}
                          obj="Icon"
                          padding={null}
                          selected={false}
                          sizing="normal"
                          style={Object {}}
                          testing={true}
                          theme={null}
                          tooltip={null}
                          top={null}
                          visible={true}
                          width={null}
                          xcss={null}
                        >
                          <StyledComponent
                            bottom={null}
                            className="ui-icon fa fa-fw fa-bomb"
                            contentEditable={false}
                            controlled={true}
                            direction="right"
                            disabled={false}
                            err={null}
                            errorMessage={null}
                            focus={false}
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bwzfXH",
                                  "isStatic": false,
                                  "lastClassName": "hBOHvv",
                                  "rules": Array [
                                    "
	text-align: center;
	",
                                    [Function],
                                    "
	",
                                    [Function],
                                    "
	",
                                    [Function],
                                    "
	",
                                    [Function],
                                    "
",
                                  ],
                                },
                                "displayName": "styled.i",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bwzfXH",
                                "target": "i",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            height={null}
                            iconName="bomb"
                            id={null}
                            imageFile=""
                            left={null}
                            location="none"
                            minHeight={null}
                            minWidth={null}
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            notheme={false}
                            obj="Icon"
                            padding={null}
                            selected={false}
                            sizing="normal"
                            style={Object {}}
                            testing={true}
                            theme={null}
                            tooltip={null}
                            top={null}
                            visible={true}
                            width={null}
                            xcss={null}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-bomb sc-bwzfXH hBOHvv"
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              height={null}
                              id={null}
                              selected={false}
                              style={Object {}}
                              width={null}
                            />
                          </StyledComponent>
                        </styled.i>
                      </ThemeProvider>
                    </Wrapper>
                  </Icon>
                </div>
              </StyledComponent>
            </styled.div>
          </ThemeProvider>
        </Wrapper>
      </Button>
    </ThemeProvider>
  </Wrapper>
</ButtonToggle>
`;

exports[`Test making a ButtonToggle invisible 1`] = `
<ButtonToggle
  bgColorOff="inherit"
  bgColorOn="inherit"
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height={null}
  iconName="bomb"
  iconNameOff="bomb"
  iconNameOn="bomb"
  iconStyle=""
  id={null}
  initialToggle={false}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="ButtonToggle"
  onClick={[MockFunction]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={false}
  width={null}
  xcss={null}
>
  <Wrapper
    bgColorOff="inherit"
    bgColorOn="inherit"
    bottom={null}
    className={null}
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage={null}
    fgColorOff="gray"
    fgColorOn="black"
    focus={false}
    height={null}
    iconName="bomb"
    iconNameOff="bomb"
    iconNameOn="bomb"
    iconStyle=""
    id={null}
    initialToggle={false}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="ButtonToggle"
    onClick={[MockFunction]}
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={false}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <Button
        bgColorOff="inherit"
        bgColorOn="inherit"
        bottom={null}
        className="ui-button-toggle"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={false}
        err={null}
        errorMessage={null}
        fgColorOff="gray"
        fgColorOn="black"
        focus={false}
        height={null}
        iconName="bomb"
        iconNameOff="bomb"
        iconNameOn="bomb"
        iconStyle=""
        id={null}
        initialToggle={false}
        left={null}
        location="none"
        minHeight={null}
        minWidth={null}
        noedit={false}
        nohover={false}
        noripple={true}
        notheme={false}
        obj="ButtonToggle"
        onClick={[Function]}
        padding={null}
        selected={false}
        sizing="normal"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "gray",
          }
        }
        testing={true}
        theme={null}
        tooltip={null}
        top={null}
        visible={false}
        width={null}
        xcss={null}
      >
        <Wrapper
          bgColorOff="inherit"
          bgColorOn="inherit"
          bottom={null}
          className="ui-button-toggle"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          fgColorOff="gray"
          fgColorOn="black"
          focus={false}
          height={null}
          iconName="bomb"
          iconNameOff="bomb"
          iconNameOn="bomb"
          iconStyle=""
          id={null}
          initialToggle={false}
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          noedit={false}
          nohover={false}
          noripple={true}
          notheme={false}
          obj="ButtonToggle"
          onClick={[Function]}
          onError={[Function]}
          padding={null}
          reset={false}
          selected={false}
          sizing="normal"
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "gray",
            }
          }
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={false}
          width={null}
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "fontFamily": "OpenSans, Georgia, serif",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "itemHoverColor": "#bedb39",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "titleBarBackgroundColor": "#004358",
                "titleBarForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.div
              className="ui-button nohover ui-button-toggle"
              disabled={false}
              id="Button-0"
              onClick={[Function]}
              sizing="normal"
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "gray",
                }
              }
              visible={false}
            >
              <StyledComponent
                className="ui-button nohover ui-button-toggle"
                disabled={false}
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-gzVnrw",
                      "isStatic": false,
                      "lastClassName": "clBriJ",
                      "rules": Array [
                        "
	",
                        "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                        "

	flex: 1;

	&:not(.nohover):hover {
		background-color: ",
                        [Function],
                        " ",
                        [Function],
                        ";
	}

	",
                        [Function],
                        "
	",
                        [Function],
                        "
",
                      ],
                    },
                    "displayName": "styled.div",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-gzVnrw",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                id="Button-0"
                onClick={[Function]}
                sizing="normal"
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "gray",
                  }
                }
                visible={false}
              >
                <div
                  className="ui-button nohover ui-button-toggle sc-gzVnrw clBriJ"
                  disabled={false}
                  id="Button-0"
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "gray",
                    }
                  }
                >
                  <Icon
                    bottom={null}
                    className=""
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage={null}
                    focus={false}
                    height={null}
                    iconName="bomb"
                    id={null}
                    imageFile=""
                    left={null}
                    location="none"
                    minHeight={null}
                    minWidth={null}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    obj="Icon"
                    padding={null}
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    theme={null}
                    tooltip={null}
                    top={null}
                    visible={true}
                    width={null}
                    xcss={null}
                  >
                    <Wrapper
                      bottom={null}
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage={null}
                      focus={false}
                      height={null}
                      iconName="bomb"
                      id={null}
                      imageFile=""
                      left={null}
                      location="none"
                      minHeight={null}
                      minWidth={null}
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      obj="Icon"
                      onError={[Function]}
                      padding={null}
                      reset={false}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      tooltip={null}
                      top={null}
                      visible={true}
                      width={null}
                      xcss={null}
                    >
                      <ThemeProvider
                        theme={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#c0c0c0",
                            "color": "#000000",
                            "fontFamily": "OpenSans, Georgia, serif",
                            "headerBackgroundColor": "#004358",
                            "headerForegroundColor": "#ffffff",
                            "headerHoverColor": "#ffe11a",
                            "hoverColor": "#c0c0c0",
                            "inputBorderColor": "#c0c0c0",
                            "itemHoverColor": "#bedb39",
                            "selectedBackgroundColor": "#1f8a70",
                            "selectedForegroundColor": "#ffe11a",
                            "titleBarBackgroundColor": "#004358",
                            "titleBarForegroundColor": "#ffe11a",
                            "tooltipBackgroundColor": "#708090",
                            "tooltipForegroundColor": "#ffffff",
                            "transitionDelay": "0.5s",
                          }
                        }
                      >
                        <styled.i
                          bottom={null}
                          className="ui-icon fa fa-fw fa-bomb"
                          contentEditable={false}
                          controlled={true}
                          direction="right"
                          disabled={false}
                          err={null}
                          errorMessage={null}
                          focus={false}
                          height={null}
                          iconName="bomb"
                          id={null}
                          imageFile=""
                          left={null}
                          location="none"
                          minHeight={null}
                          minWidth={null}
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          notheme={false}
                          obj="Icon"
                          padding={null}
                          selected={false}
                          sizing="normal"
                          style={Object {}}
                          testing={true}
                          theme={null}
                          tooltip={null}
                          top={null}
                          visible={true}
                          width={null}
                          xcss={null}
                        >
                          <StyledComponent
                            bottom={null}
                            className="ui-icon fa fa-fw fa-bomb"
                            contentEditable={false}
                            controlled={true}
                            direction="right"
                            disabled={false}
                            err={null}
                            errorMessage={null}
                            focus={false}
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bwzfXH",
                                  "isStatic": false,
                                  "lastClassName": "hBOHvv",
                                  "rules": Array [
                                    "
	text-align: center;
	",
                                    [Function],
                                    "
	",
                                    [Function],
                                    "
	",
                                    [Function],
                                    "
	",
                                    [Function],
                                    "
",
                                  ],
                                },
                                "displayName": "styled.i",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bwzfXH",
                                "target": "i",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            height={null}
                            iconName="bomb"
                            id={null}
                            imageFile=""
                            left={null}
                            location="none"
                            minHeight={null}
                            minWidth={null}
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            notheme={false}
                            obj="Icon"
                            padding={null}
                            selected={false}
                            sizing="normal"
                            style={Object {}}
                            testing={true}
                            theme={null}
                            tooltip={null}
                            top={null}
                            visible={true}
                            width={null}
                            xcss={null}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-bomb sc-bwzfXH hBOHvv"
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              height={null}
                              id={null}
                              selected={false}
                              style={Object {}}
                              width={null}
                            />
                          </StyledComponent>
                        </styled.i>
                      </ThemeProvider>
                    </Wrapper>
                  </Icon>
                </div>
              </StyledComponent>
            </styled.div>
          </ThemeProvider>
        </Wrapper>
      </Button>
    </ThemeProvider>
  </Wrapper>
</ButtonToggle>
`;

exports[`Test retrieval of ButtonToggle props object 1`] = `
Object {
  "bgColorOff": "inherit",
  "bgColorOn": "inherit",
  "bottom": null,
  "children": null,
  "className": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "fgColorOff": "gray",
  "fgColorOn": "black",
  "focus": false,
  "height": null,
  "iconName": "bomb",
  "iconNameOff": "bomb",
  "iconNameOn": "bomb",
  "iconStyle": "",
  "id": null,
  "initialToggle": false,
  "left": null,
  "location": "none",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "obj": "ButtonToggle",
  "onClick": [Function],
  "padding": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;
